# FlexibleCompanyBot

./: .gitignore  LICENSE  README.md  install.bash  pyproject.toml
example/: index.html
qa_system/: api.py  api_utils.py
qa_system/busqueda/: busqueda.py  controlador_qa.py  models.py  qa_info.py  respuesta.py
qa_system/config/: config.yml
qa_system/preprocesado/: cargar_dataset.py  controlador_procesado.py  dataset.py  limpiar_dataset.py  segmentar_dataset.py
web-components/flexible-company-bot/: FlexibleCompanyBot.js  chatbot.html  chatbot_style.css
web-components/flexible-company-bot/javascript/: controlador.js  manejo_gui.js  manejo_mensajes.js
web-components/upload-file/: FileUploader.js  file-uploader.html  file-uploader_style.css
web-components/upload-file/javascript/: manejo_ficheros.js
